--- a/vue+gulp216/app/index.html
+++ b/vue+gulp216/app/index.html
@@ -5,7 +5,8 @@
         <title>vue</title>
         <!-- 用户CSS文件 -->
         <!-- build:css styles/index.css-->
-        <link rel="stylesheet" type="text/css" href="./styles/index.css">
+        <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="/styles/index.css">
         <!-- endbuild -->
     </head>
     <body>
@@ -23,5 +24,5 @@
     <!-- endbuild -->
 
     <!-- 用户js -->
-    <script src="./scripts/bundle.js"></script>
+    <script src="scripts/bundle.js"></script>
 </html>
